--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.0",
     "graphql": "^16.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "17.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
